# tackle

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/base/assets/configs/games/call_of_duty/: call_of_duty_black_ops_i.toml  call_of_duty_black_ops_ii.toml  call_of_duty_ghosts.toml  call_of_duty_modern_warfare_i_remastered_2017.toml  call_of_duty_modern_warfare_ii_2009.toml  call_of_duty_world_at_war.toml
assets/base/assets/configs/projects/call_of_duty/: AlterWare.toml  Aurora.toml  Plutonium.toml
assets/base/assets/dependencies/: example_hash.toml
assets/base/assets/dependencies/VC++ 2005/: dependency.toml
assets/base/assets/dependencies/VC++ 2008/: dependency.toml
assets/base/assets/dependencies/VC++ 2010/: dependency.toml
assets/base/assets/dependencies/example_dependency/: dependency.toml
assets/base/assets/games/call_of_duty/: call_of_duty_advanced_warfare.toml  call_of_duty_black_ops_iii.toml  call_of_duty_modern_warfare_iii_2011.toml
assets/dev_tools/: get_sha_256_hashes.py
docs/: to_do_list.txt
src/tackle/: __main__.py  cli.py  configs.py  customization.py  data_structures.py  dependencies.py  file_io.py  installer.py  log.py  log_info.py  main.py  offline_packages.py  settings.py  wrappers.py
